# opengl-learn

./: .gitmodules  CMakeLists.txt  README.en.md  README.md  cmake-configure.bat
data/: data.json
data/shader/: BoxModel_SimpleTexture.frag  BoxModel_SimpleTexture.vert  ModelShader.frag  PureColorMaterial.frag  SphereModel_SimpleColor.frag  SphereModel_SimpleColor.vert  common.frag  common.vert  lightingShader.vert  lightingShader2.frag  lightingShader3.frag  lightingShader_fix.frag  shader.frag  shader.vert
src/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/sandbox/: Actor.cpp  Actor.h  BoxModel.cpp  BoxModel.h  BoxModelWithTextureExample.cpp  BoxModelWithTextureExample.h  CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  IModel.cpp  IModel.h  IlluminantModel.cpp  IlluminantModel.h  IlluminationWidget.cpp  IlluminationWidget.h  LightBoxModel.cpp  LightBoxModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SnowFlakeModel.cpp  SnowFlakeModel.h  SpaceBox.cpp  SpaceBox.h  SphereModel.cpp  SphereModel.h  World.cpp  World.h  actor.cpp  actor.h  actor_camera_component.cpp  actor_camera_component.h  actor_component.cpp  actor_component.h  actor_input_component.cpp  actor_input_component.h  actor_light_component.cpp  actor_light_component.h  actor_primitive_component.cpp  (+58 more)
src/sandbox/render/: CustomActors.cpp  CustomActors.h
src/sandbox/utils/: signals.ixx  synced_stream.h  synced_stream.ixx  thread_pool.h  thread_pool.ixx
src/test/: CMakeLists.txt  configure.h.in  main.cpp
src/test/utils/: message_queue.ixx  signals.ixx  tools.ixx  worker.ixx
